Fix 1px floating gap added by .p-breadcrumbs

--- a/static/sass/_v1_pattern_navigation.scss
+++ b/static/sass/_v1_pattern_navigation.scss
@@ -101,7 +101,7 @@
           position: relative;
           left: 50%;
           transform: translate(-50%, 0);
-          width: 100vw;
+          width: 100%;
         }
 
         &__link {
